finished bootstrap 3.0 changes

--- a/public/css/bootstrap/bootstrap-overrides.css
+++ b/public/css/bootstrap/bootstrap-overrides.css
@@ -274,6 +274,7 @@ textarea::-webkit-input-placeholder {
 .dropdown-submenu:hover > a,
 .dropdown-submenu:focus > a {
 	background: rgb(60, 91, 121) !important;
+    color: #FFF;
 }
 
 
