--- a/public/css/compiled/user-list.css
+++ b/public/css/compiled/user-list.css
@@ -54,6 +54,7 @@
   color: #778391;
   font-style: italic;
   margin-top: 0;
+  margin-left:40px;
 }
 .users-list .pagination {
   margin-top: 25px;
