--- a/app/views/users/auth.jade
+++ b/app/views/users/auth.jade
@@ -1,13 +1,16 @@
 extends ../layouts/default
 
 block content
-  .row
-    .offset1.span5
-      a(href="/auth/google")
-        img(src="/img/icons/google.png")
-    .span6
-      if message && message.length
-        .fade.in.alert.alert-error
-          button.close(type="button", data-dismiss="alert") &times;
-          strong #{message}
-      block auth
+    .container
+      .jumbotron
+        .row.header.no-jumbotron
+            .row.form-wrapper
+                //.offset1.span5
+                //  a(href="/auth/google")
+                //    img(src="/img/icons/google.png")
+                .col-md-6
+                  if message && message.length
+                    .fade.in.alert.alert-error
+                      button.close(type="button", data-dismiss="alert") &times;
+                      strong #{message}
+                  block auth
