--- a/app/views/users/signin.jade
+++ b/app/views/users/signin.jade
@@ -1,19 +1,21 @@
 extends auth
 
 block auth
-  form.signin.form-horizontal(action="/users/session", method="post")
-    .control-group
-      label.control-label(for='email') Email
-      .controls
-        input#email(type='text', name="email", placeholder='Email')
+  h2 Sign in
+  br
+  form.signin.form-horizontal(role="form",action="/users/session", method="post")
+    .form-group
+      label.control-label.col-md-2(for='email') Email:
+      .col-md-10
+        input.form-control#email(type='text', name="email", placeholder='Email')
 
-    .control-group
-      label.control-label(for='password') Password
-      .controls
-        input#password(type='password', name="password", placeholder='Password')
+    .form-group
+      label.control-label.col-md-2(for='password') Password:
+      .col-md-10
+        input#password(class='form-control',type='password', name="password", placeholder='Password')
 
     .form-actions
-      button.btn.btn-primary(type='submit') Sign in
+      button.btn.btn-success(type='submit') Sign in
       &nbsp;
       | or&nbsp;
       a.show-signup(href="/signup") Sign up
