--- a/app/views/users/signup.jade
+++ b/app/views/users/signup.jade
@@ -1,21 +1,23 @@
 extends auth
 
 block auth
-  form.signup.form-horizontal(action="/users", method="post")
-    .control-group
-      label.control-label(for='name') Full name
-      .controls
-        input#name(type='text', name="name", placeholder='Full name', value=user.name)
+  h2 Sign up
+  br
+  form.signup.form-horizontal(role="form",action="/users", method="post")
+    .form-group
+      label.control-label.col-md-3(for='name') Full Name:
+      .col-md-9
+        input.form-control#name(type='text', name="name", placeholder='Full name', value=user.name)
 
-    .control-group
-      label.control-label(for='email') Email
-      .controls
-        input#email(type='text', name="email", placeholder='Email', value=user.email)
+    .form-group
+      label.control-label.col-md-3(for='email') Email
+      .col-md-9
+        input.form-control#email(type='text', name="email", placeholder='Email', value=user.email)
 
-    .control-group
-      label.control-label(for='password') Password
-      .controls
-        input#password(type='password', name="password", placeholder='Password')
+    .form-group
+      label.control-label.col-md-3(for='password') Password
+      .col-md-9
+        input.form-control#password(type='password', name="password", placeholder='Password')
 
     .form-actions
       button.btn.btn-primary(type='submit') Sign up
