--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -2,3 +2,9 @@ body{
 	padding-top: 60px;
   	padding-bottom: 40px;
 }
+.no-jumbotron{
+    color: inherit;
+    font-size: 14px;
+    font-weight: normal ;
+    line-height: inherit;
+}
