--- a/public/views/leads/create/create.html
+++ b/public/views/leads/create/create.html
@@ -1,28 +1,24 @@
-<div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController" data-ng-init="findOne()">
+<div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController">
     <!-- header -->
-    <div class="row-fluid header">
-        <div class="span8">
+    <div class="row header">
+        <div class="col-md-8">
             <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
-            <h1 class="main-title"><i class="icon-book table-icon"></i><span>Add a Lead</span></h1>
+            <h1 class="main-title"><i class="icon-book table-icon"></i><span>Create Lead</span></h1>
         </div>
-
         <div data-ng-show="global.user._id == lead.user._id">
             <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete Lead" data-ng-click="remove();">
                 <i class="icon-trash"></i>
-            </a>
-            <a class="btn-flat icon large pull-right edit" href="/#!/leads/{{lead._id}}/edit">
-                Edit this lead
             </a>
         </div>
     </div>
     <div class="tabbable"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs">
             <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
-            <!-- not yet implemented for creation--><!--<li><a href="#tab2" data-toggle="tab">Site Survey</a></li>-->
         </ul>
         <div class="tab-content" id="tab-content">
             <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/create/general.html'"></div>
-            <!--Not yet implemented for creating leads--><!--<div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>-->
+            <!--<div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>-->
         </div>
     </div>
-</div>
+</div
+
