--- a/app/views/pages/contactUs.jade
+++ b/app/views/pages/contactUs.jade
@@ -12,14 +12,14 @@ block content
             .row.header.no-jumbotron
               .row.form-wrapper
                 .col-md-12
-                  form.form-horizontal(role='form')
+                  form.form-horizontal(role='form',action="sendContactEmail",method="post")
                       .form-group
                         .col-md-2.control-label
                           label Name:
                         .col-md-5
-                          input.form-control(type='text', data-ng-model='firstName', placeholder='First Name', maxlength='30', required='required')
+                          input.form-control(type='text', name="firstName" data-ng-model='firstName', placeholder='First Name', maxlength='30')
                         .col-md-5
-                          input.form-control.small-inline(type='text', data-ng-model='lastName', placeholder='Last Name', maxlength='30', required='required')
+                          input.form-control.small-inline(type='text', name="lastName", data-ng-model='lastName', placeholder='Last Name', maxlength='30')
                       .form-group
                         label.col-md-2.control-label Company:
                         .col-md-10
@@ -31,11 +31,15 @@ block content
                       .form-group
                         label.col-md-2.control-label Email:
                         .col-md-10
-                          input.form-control(type='text', data-ng-model='email', placeholder='example@example.com')
+                          input.form-control(type='text', name="email", data-ng-model='email', placeholder='example@example.com',required="required")
                       .form-group
                         label.col-md-2.control-label Inquiry:
                         .col-md-10
-                          textarea.form-control(rows='5',type='text', data-ng-model='inquiry', placeholder='Your inquiry here...')
+                          textarea.form-control(rows='5',type='text', name="inquiry",data-ng-model='inquiry', placeholder='Your inquiry here...', required="required")
+                      .form-group
+                        .col-md-12
+                          button.btn.btn-success.pull-right(type="submit") Submit
+                            
       hr
     footer
       p &copy; SolarMongo 2014
