working on pricing

--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -47,7 +47,7 @@
 </header>
 <!-- end navbar not authenticated -->
 
-<!-- navbar is authenticated-->
+<!-- navbar is authenticated
 <header class="navbar navbar-inverse" role="banner">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" id="menu-toggler" ng-click="isCollapsed = !isCollapsed">
