--- a/public/views/leads/list.html
+++ b/public/views/leads/list.html
@@ -77,7 +77,7 @@
                     <span class="subtext">{{lead.companyName}}</span>
                 </td>
                 <td>
-                    {{lead.city | placeholder}}, {{lead.state | placeholder}}
+                    {{lead.city}} {{lead.state}}
                 </td>
                 <td>
                     {{lead.email}}
