--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -34,6 +34,7 @@ script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
 script(type='text/javascript', src='/js/controllers/leads.js')
+script(type='text/javascript', src='/js/controllers/navigation.js')
 script(type='text/javascript', src='/js/controllers/slider.js')
 script(type='text/javascript', src='/js/init.js')
 
