--- a/public/css/compiled/layout.css
+++ b/public/css/compiled/layout.css
@@ -264,7 +264,7 @@ input.search {
   box-shadow: 0 2px 1px -1px #FFFFFF;
   color: #6e829b;
   outline: 0px;
-  width: 88%;
+  width: 100%;
 }
 #sidebar-nav #dashboard-menu > li {
   position: relative;
@@ -357,7 +357,7 @@ input.search {
 }
 #sidebar-nav #dashboard-menu ul.submenu {
   list-style-type: none;
-  display: none;
+
   margin-top: 7px;
   margin-bottom: 15px;
   margin-right: 5px;
@@ -371,6 +371,7 @@ input.search {
   display: block;
 }
 #sidebar-nav #dashboard-menu ul.submenu a {
+  outline: 0;
   font-weight: normal;
   font-size: 13px;
   color: #4c535a;
