--- a/public/views/branding/branding.html
+++ b/public/views/branding/branding.html
@@ -1,7 +1,8 @@
-<!--<div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController" data-ng-init="findOne()">
+<div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController" data-ng-init="findOne()">
+    <!-- header -->
     <div class="row header">
         <div class="col-md-8">
-            <img src="img/contact-profile.png" class="avatar img-circle">
+            <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
             <h1 class="main-title"><i class="icon-book table-icon"></i><span>Company Name Here</span></h1>
         </div>
         <div data-ng-show="global.user._id == lead.user._id">
@@ -10,7 +11,7 @@
             </a>
         </div>
     </div>
-    <div class="tabbable">
+    <div class="tabbable"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs">
             <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
             <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
@@ -20,6 +21,5 @@
             <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
         </div>
     </div>
-</div>
--->
-<div>admin</div>
+</div
+
