--- a/app/views/pages/signup.jade
+++ b/app/views/pages/signup.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
   .container
     .jumbotron
-        h1 Sign up
+        h1 Request a product demo
         br
         p
           | We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.  Schedule a free product demo below!
