--- a/app/views/pages/api.jade
+++ b/app/views/pages/api.jade
@@ -2,16 +2,17 @@ extends ../layouts/default
 
 block content
 	.container
-		.hero-unit
+		.jumbotron
 			h1 Api Implementation
+			br
 			h3 Getting a token
 			p
-				| REQUEST TOKEN (POST): /token - requires: email, password - returns the token that is user specific. Will require email and password as parameters.
+				| REQUEST TOKEN (POST): /api/token - requires: email, password - returns the token that is user specific. Will require email and password as parameters.
 			p
 
-			h3 Auth
+			h3 User
 			p
-				| These are the Auth routes.  They will require email and password as parameters.
+				| These are the User routes.  Require access_token as parameter
 			p
 				ul
 					li
@@ -21,18 +22,18 @@ block content
 
 			h3 Leads
 			p
-				| You will be using GET, POST, PUT, and DEL for your requests. All requests requires the following: access_token
+				| You will be using GET, POST, PUT, and DEL for your requests. All requests requires the following: access_token=??????
 				ul
 					li
 						| GET LEADS(GET): /api/leads - returns: user (that is logged in), firstName, lastName, .. etc 
 					li
-						| Underconstruction: CREATE LEAD(POST): /api/leads - requires at least: firstName, lastName - returns ??
+						| CREATE LEAD(POST): /api/leads - requires at least: firstName, lastName - returns lead
 					li
 						| GET A LEAD(GET): /api/leads/:leadId - requires: leadId - returns a lead, user (that is logged in), firstName, lastName, .. etc 
 					li
-						| Undercontruction: UPDATE LEAD(PUT): /api/leads/:leadId - requires: leadId - updates a lead - returns ???
+						| UPDATE LEAD(PUT): /api/leads/:leadId - requires: leadId - updates a lead - returns lead
 					li
-						| Undercontruction: DELETE LEAD(DEL): /api/leads/:leadId - requires: leadId - updates a lead - returns ???
+						| DELETE LEAD(DEL): /api/leads/:leadId - requires: leadId - updates a lead - returns lead
 			p
 
 		hr
