--- a/app/views/users/signin.jade
+++ b/app/views/users/signin.jade
@@ -7,15 +7,15 @@ block auth
     .form-group
       label.control-label.col-md-2(for='email') Email:
       .col-md-10
-        input.form-control#email(type='text', name="email", placeholder='Email')
+        input.form-control#email(type='text', name="email", placeholder='Email', required)
 
     .form-group
       label.control-label.col-md-2(for='password') Password:
       .col-md-10
-        input#password(class='form-control',type='password', name="password", placeholder='Password')
+        input#password(class='form-control',type='password', name="password", placeholder='Password', required)
 
     .form-actions
       button.btn.btn-success(type='submit') Sign in
       &nbsp;
       | or&nbsp;
-      a.show-signup(href="/signup") Sign up
+      a.show-signup(href="/forgotpassword") Forgot Password?
