--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -8,6 +8,7 @@ script(type='text/javascript', src="/js/thirdparty/jquery.flot.js")
 script(type='text/javascript', src="/js/thirdparty/jquery.flot.stack.js")
 script(type='text/javascript', src="/js/thirdparty/jquery.flot.resize.js")
 script(type='text/javascript', src="/js/thirdparty/theme.js")
+script(type='text/javascript', src="/js/thirdparty/googleAnalytics.js")
 
 
 //AngularJS
