--- a/app/views/users/forgotPassword.jade
+++ b/app/views/users/forgotPassword.jade
@@ -13,4 +13,4 @@ block auth
       button.btn.btn-success(type='submit') Reset
       &nbsp;
       | or&nbsp;
-      a.show-signup(href="/contactus") Forgot Your Email?
+      a.show-signup(href="/contactus")
